--- a/style/indexStyle.css
+++ b/style/indexStyle.css
@@ -1,4 +1,23 @@
+.hg {
+    /* The image used */
+    background-image: url(../img/artsfon.com-68396.jpg);
 
+    /* Full height */
+    height: 100%; 
+
+    /* Create the parallax scrolling effect */
+    background-attachment:fixed;
+    background-position:center;
+    background-repeat:no-repeat;
+    background-size:cover;
+}
+
+/* Turn off parallax scrolling for tablets and phones. Increase the pixels if needed */
+@media only screen and (max-device-width: 1024px) {
+    .hg {
+        background-attachment: scroll;
+    }
+}
 .bgh {
     /* The image used */
     background-image: url(../img/chemistry-background-ppt-0.jpg);
