--- a/style/Phs Css.css
+++ b/style/Phs Css.css
@@ -1,36 +1,42 @@
+.color-white{
+    color: black:
+}
 a:link {
     text-decoration: none;
 }
-a:visited{
+
+a:visited {
     color: pink;
-     text-decoration: none;
+    text-decoration: none;
 }
+
 .text-color-white {
     color: pink;
 }
 
-a:hover{
+a:hover {
     color: blue;
 }
 
-.center{
+.center {
     text-align: center;
 }
+
 .hg {
     /* The image used */
-    background-image: url(../img/artsfon.com-68396.jpg);
-
+    background-image: url(../img/mac_physics_wallpaper-2560x1600.jpg);
     /* Full height */
-    height: 100%; 
-
+    height: 100%;
     /* Create the parallax scrolling effect */
-    background-attachment:fixed;
-    background-position:center;
-    background-repeat:no-repeat;
-    background-size:cover;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
+
 /* Turn off parallax scrolling for tablets and phones. Increase the pixels if needed */
+
 @media only screen and (max-device-width: 1024px) {
     .hg {
         background-attachment: scroll;
