--- a/style/Poyle.css
+++ b/style/Poyle.css
@@ -67,5 +67,6 @@
 #Xb{ position:absolute;top:75px;left: 170px;}
 #ab{ position:absolute;top:55px;left: 190px;} 
 */
-#poh{ position:absolute;top:65px;left: 73px;} 
+#trkez{ position:absolute;top:65px;left: 203px;} 
 #ph{ position:absolute;top:65px;left: 113px;}
+#log{ position:absolute;top:47px;left: 173px;}
