--- a/style/Ph3.css
+++ b/style/Ph3.css
@@ -1,3 +1,79 @@
+#result {
+    width: 200px;
+    height: 20px;
+
+    bottom: 10px;
+    left: 50px;
+    background-color: #e3e8f2;
+}
+
+.buttom {
+    width: 210px;
+    height: 30px;
+    background-color: #e3e8f2;
+    text-align: center;
+}
+
+.buttom:hover {
+    background-color: rgb(100, 100, 100);
+    color: white;
+}
+
+.tips {
+    text-align: center;
+    bottom: 85px;
+    left: 40%;
+}
+
+#res-div {
+    position: relative;
+    left: 30px;
+    bottom: 10px;
+    width: 250px;
+    text-align: left;
+    height: 30px;
+}
+
+#sal-div {
+    position: relative;
+    top: 40px;
+    left: 100px;
+    width: 300px;
+    height: 40px;
+}
+
+#eq {
+    position: absolute;
+    top: 47px;
+    left: 155px;
+}
+
+#trkez {
+    position: absolute;
+    top: 65px;
+    left: 203px;
+}
+
+#ph {
+    position: absolute;
+    top: 65px;
+    left: 113px;
+}
+
+#log {
+    position: absolute;
+    top: 47px;
+    left: 173px;
+}
+
+#Mdi {
+    position: relative;
+    top: 50%;
+    right: 100px;
+    width: 333px;
+    height: 300px;
+}
+
 .color-white{
     color: white;
 }
