unit three done . you can try

--- a/style/Ph3.css
+++ b/style/Ph3.css
@@ -94,9 +94,10 @@
 
 
 /* Turn off parallax scrolling for tablets and phones. Increase the pixels if needed */
-
+/*
 @media only screen and (max-device-width: 1024px) {
     .hg {
         background-attachment: scroll;
     }
 }
+*/
