--- a/style/ph2.css
+++ b/style/ph2.css
@@ -83,9 +83,9 @@
 
 .hg {
     /* The image used */
-    background-image: url(../img/PHYSICS_equation_mathematics_math_formula_science_4000x2962.jpg);
+    background-image: url(img/artsfon.com-68396.jpg);
     /* Full height */
-    height: auto;
+    height: 100%;
     /* Create the parallax scrolling effect */
     background-attachment: fixed;
     background-position: center;
