--- a/style/Ph3.css
+++ b/style/Ph3.css
@@ -82,9 +82,9 @@
 }
 .hg {
     /* The image used */
-    background-image: url(../img/pattern_background_band_space_65997_3840x2160.jpg);
+    background-image: url(img/artsfon.com-68396.jpg);
     /* Full height */
-    height:auto;
+    height:100%;
     /* Create the parallax scrolling effect */
     background-attachment: fixed;
     background-position: center;
