--- a/style/Poyle.css
+++ b/style/Poyle.css
@@ -11,7 +11,7 @@
 .SeN-BC-nel{ border: 1px solid #0024de;}
 .SeN-BC-bla{ border: 1px solid #000000;}
 .SeN-BC-wi{ border: 1px solid #ffffff;}
-
+/*
 .tex{ width: 30px; height: 10px;  }
 #result{ width:200px;height: 20px;position: absolute; bottom: 10px; left: 50px; background-color:#e3e8f2;}
 
@@ -22,7 +22,7 @@
 
 #sal-div{position: absolute; top: 40px; left: 100px; width: 300px;height: 40px;}
 #eq{position: absolute; top: 47px;left:155px;}
-
+*/
 
 /* poyle ,Mitigation equations ,perfct ,Drop in freezing,High boiling point
 #p1{ position:absolute;top:65px;left: 73px;} 
