--- a/style/ph2.css
+++ b/style/ph2.css
@@ -89,7 +89,7 @@
     /* Create the parallax scrolling effect */
     background-attachment: fixed;
     background-position: center;
-    background-repeat: no-repeat;
+    background-repeat: repeat;
     background-size: cover;
 }
 
@@ -100,4 +100,22 @@
     .hg {
         background-attachment: scroll;
     }
+}
+footer {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 1rem;
+  background-color: #000000;
+  text-align: center;
+    color: white;
+}
+.a:link {
+    text-decoration: none;
+}
+
+.a:visited {
+    color: #ffffff;
+    text-decoration: none;
 }
