--- a/style/Ph3.css
+++ b/style/Ph3.css
@@ -88,7 +88,7 @@
     /* Create the parallax scrolling effect */
     background-attachment: fixed;
     background-position: center;
-    background-repeat: no-repeat;
+    background-repeat: repeat;
     background-size: cover;
 }
 
@@ -101,3 +101,21 @@
     }
 }
 */
+footer {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 1rem;
+  background-color: #000000;
+  text-align: center;
+    color: white;
+}
+.a:link {
+    text-decoration: none;
+}
+
+.a:visited {
+    color: #ffffff;
+    text-decoration: none;
+}
