--- a/style/Phs Css.css
+++ b/style/Phs Css.css
@@ -154,7 +154,7 @@ a:hover {
     height: 100%;
     background-attachment: fixed;
     background-position: center;
-    background-repeat: no-repeat;
+    background-repeat:repeat;
     background-size: cover;
 }
 
@@ -162,4 +162,22 @@ a:hover {
     .hg {
         background-attachment: scroll;
     }
+}
+footer {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 1rem;
+  background-color: #000000;
+  text-align: center;
+    color: white;
+}
+.a:link {
+    text-decoration: none;
+}
+
+,a:visited {
+    color: #ffffff;
+    text-decoration: none;
 }
