--- a/style/indexStyle.css
+++ b/style/indexStyle.css
@@ -60,7 +60,7 @@ body, html {
 
 .parallax {
     /* The image used */
-    background-image: url(../style/img/Website-Design-Background.png);
+    background: url(img/Website-Design-Background.png) ;
 
     /* Full height */
     height: 100%; 
@@ -68,9 +68,11 @@ body, html {
     /* Create the parallax scrolling effect */
     background-attachment: fixed;
     background-position: center;
-    background-repeat: no-repeat;
+    background-repeat: repeat;
     background-size: cover;
 }
+.test{ opacity: 0.5;
+    filter: alpha(opacity=50);}
 
 /* Turn off parallax scrolling for tablets and phones. Increase the pixels if needed */
 @media only screen and (max-device-width: 1024px) {
