--- a/style/Phs Css.css
+++ b/style/Phs Css.css
@@ -150,12 +150,8 @@ a:hover {
 }
 
 .hg {
-    background-image: url(img/artsfon.com-68396.jpg);
-    height: 100%;
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat:repeat;
-    background-size: cover;
+   background: rgb(30, 30, 30);
+       
 }
 
 @media only screen and (max-device-width: 1024px) {
