--- a/style/ch css.css
+++ b/style/ch css.css
@@ -4,14 +4,8 @@
 
 .bgh {
     /* The image used */
-    background-image: url(img/Website-Design-Background.png);
-    /* Full height */
-    height: auto;
-    /* Create the parallax scrolling effect */
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: repeat;
-    background-size: cover;
+  background: rgb(30, 30, 30);
+      
 }
 
 
@@ -40,3 +34,5 @@ a:visited {
     color: #ffffff;
     text-decoration: none;
 }
+.text-color-g{color: rgb(0, 188, 0)}
+.text-color-y{color: rgb(252, 238, 0)}
