--- a/style/uunit - 1.css
+++ b/style/uunit - 1.css
@@ -1,85 +1,19 @@
-#Mdi{ position: relative ;top:center; right: center; width: 333px; height:300px;}
+.SeN-lor-r{ background:#EA4335;color: white;}
 
-.SeN-BC-re{ border: 1px solid #ff0000;}
-.SeN-BC-or{ border: 1px solid #ff9200;}
-.SeN-BC-yl{ border: 1px solid #fff900;}
-.SeN-BC-gre{ border: 1px solid #1ca700;}
-.SeN-BC-gra{ border: 1px solid #7e7e7e;}
-.SeN-BC-cy{ border: 1px solid #00d6de;}
-.SeN-BC-bl{ border: 1px solid #0090ff;}
-.SeN-BC-pu{ border: 1px solid #6d00de;}
-.SeN-BC-nel{ border: 1px solid #0024de;}
-.SeN-BC-bla{ border: 1px solid #000000;}
-.SeN-BC-wi{ border: 1px solid #ffffff;}
+.SeN-lor-o{ background:#FF9900; color:white}
 
-.tex{ width:50px; height: 15px; margin: 15px; padding:3px;  }
-#result{ width:200px;height: 20px;position: absolute; bottom: 10px; left: 50px; background-color:#e3e8f2;}
-
-.buttom{position: absolute;top: 100px;left: 53px;  width: 210px; height: 18px; background-color:#e3e8f2; text-align: center; }
-.buttom:hover{background-color: rgb(100,100,100); color: white;}
-.tips{text-align: center; position: absolute;bottom:85px;left: 40%;}
-#res-div{position:absolute;left:30px;bottom: 10px; width: 250px; text-align: left; height:30px;}
-
-#sal-div{position: absolute; top: 40px; left: 100px; width: 300px;height: 40px;}
-#eq{position: absolute; top: 47px;left:155px;}
+.SeN-lor-b{ background:#4285F4;color: white;}
 
 
-
-/*P1 V1 =P2 V2 */
-
-#p1{ position:absolute;top:65px;left: 73px;} 
-#v1{ position:absolute;top:65px;left: 113px;}
-#p2{ position:absolute;top:65px;left: 173px;}
-#v2{ position:absolute;top:65px;left: 210px;} 
-
-/*V1 / T1 = V2 / T2   */
-
-#v3{ position: absolute;top:45px;left: 113px;} 
-#t1{ position: absolute;top:75px;left: 113px;}
-#v4{ position: absolute;top:45px;left: 193px;}
-#t2{ position: absolute;top:75px;left: 193px;}
-
-/*P1 / T1 = P2 / T2   */
-
-#P1{ position: absolute;top:55px;left: 113px;} 
-#T1{ position: absolute;top:75px;left: 113px;}
-#P2{ position: absolute;top:55px;left: 173px;}
-#T2{ position: absolute;top:75px;left: 173px;} 
-
-/*P1 V1 / T1 =P2 V2 / T2*/
-
-#pp1{ position: absolute;top:55px;left: 73px;} 
-#tt1{ position: absolute;top:75px;left: 93px;} 
-#vv1{ position: absolute;top:55px;left: 113px;}
-#pp2{ position: absolute;top:55px;left: 173px;}
-#tt2{ position: absolute;top:75px;left: 193px;}
-#vv2{ position: absolute;top:55px;left: 210px;}
-
-/* P = nRT */
-
-#P{ position:absolute;top:65px;left: 113px;} 
-#n{ position:absolute;top:65px;left: 173px;}
-#T{ position:absolute;top:65px;left: 210px;}
-
-#R{position: absolute; top: 47px;left:250px;}
-
-/* M = mRT / PV*/
-
-#M{ position:absolute;top:65px;left: 113px;} 
-#m{ position:absolute;top:55px;left: 173px;}
-#T{ position:absolute;top:55px;left: 213px;}
-#V{ position:absolute;top:75px;left: 213px;} 
-#P{ position:absolute;top:75px;left: 173px;} 
-
-#r{position: absolute; top: 37px;left:250px;}
-
- /* D = MP / RT*/
-
-#D{ position:absolute;top:65px;left: 113px;} 
-#MM{ position:absolute;top:75px;left: 173px;}
-#TT{ position:absolute;top:55px;left: 213px;}
-#PP{ position:absolute;top:75px;left: 173px;} 
-#r{position: absolute; top: 57px;left:250px;}
+.SeN-lor-g{ background:#34A853;color: white;}
 
 
+.SeN-lor-y{ background:#FBBC05;color: white;}
 
+.SeN-lor-c{ background:#059ea6;color: white;}
+
+
+.SeN-lor-p{ background:#6f00de;color: white;}
+   
+    
+    
