--- a/style/uunit - 1.css
+++ b/style/uunit - 1.css
@@ -1,19 +1,18 @@
-.SeN-lor-r{ background:#EA4335;color: white;}
+.SeN-lor-r{ background:#EA4335; color: white;}
 
-.SeN-lor-o{ background:#FF9900; color:white}
+.SeN-lor-o{ background:#FF9900;}
 
 .SeN-lor-b{ background:#4285F4;color: white;}
 
 
-.SeN-lor-g{ background:#34A853;color: white;}
+.SeN-lor-g{ background:#34A853; color: white;}
 
 
-.SeN-lor-y{ background:#FBBC05;color: white;}
+.SeN-lor-y{ background:#FBBC05;}
 
-.SeN-lor-c{ background:#059ea6;color: white;}
+.SeN-lor-c{ background:#059ea6;}
 
 
-.SeN-lor-p{ background:#6f00de;color: white;}
+.SeN-lor-p{ background:#6f00de; color: white;}
    
-    
-    
+
