--- a/style/Phs Css.css
+++ b/style/Phs Css.css
@@ -81,12 +81,13 @@
     bottom: 10px;
     left: 50px;
     background-color: #e3e8f2;
+    border: none;    
 }
 
 .buttom {
     width: 210px;
     height: 30px;
-    background-color: #e3e8f2;
+    background-color: #3c3c3c;
     text-align: center;
 }
 
@@ -173,7 +174,12 @@ footer {
     text-decoration: none;
 }
 
-,a:visited {
-    color: #ffffff;
+a:visited {
+    color: #4a4a4a;
     text-decoration: none;
+}
+a{
+    color: #3c3c3c;
+    text-decoration: none;
+    
 }
